Fix routes for gh-pages

--- a/demo/iframe.html
+++ b/demo/iframe.html
@@ -35,7 +35,7 @@
         <li><button id="expand-y">Expand Y</button></li>
     </ul>
 
-    <script src="/dist/seamless-iframe.js"></script>
+    <script src="/seamless-iframe/dist/seamless-iframe.js"></script>
 
     <script>
         document.getElementById('expand-x').onclick = function () {
