Fix routes for gh-pages

--- a/demo/iframe.html
+++ b/demo/iframe.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8"/>
     <title>Seamless Iframe Demo</title>
-    <link rel="stylesheet" href="/dist/seamless-iframe.css"/>
+    <link rel="stylesheet" href="/seamless-iframe/dist/seamless-iframe.css"/>
     <style>
         html {
             border: 2px dashed silver;
